# shogi-ml

./: .gitignore  Cargo.toml  train.bat
migrations/: 20230517095121_initialize.up.sql
py_src/: init_model.py  main.py  test.py  train.py
python/: main.py
src/: board.rs  db.rs  game.rs  inference.rs  lib.rs  main.rs  piece.rs
