[package]
name = "shogi-alg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bincode = "1.3.3"
rand = { version = "0.8.5", features = ["std", "std_rng"] }
rayon = "1.7.0"
serde = { version = "1.0.163", features = ["derive"] }
